2007-07-10  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(getRangeAxisIndex): New method.

2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/BarRenderer.java
	(BarRenderer): Changed default value for drawBarOutline,
	* source/org/jfree/chart/renderer/category/IntervalBarRenderer.java
	(drawInterval): Respect drawBarOutline setting,
	* source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
	(errorIndicatorStroke): New field,
	(StatisticalBarRenderer): Initialise new field,
	(getErrorIndicatorStroke): New method,
	(setErrorIndicatorStroke): Likewise,
	(drawHorizontalItem): Respect drawBarOutline setting, and set appropriate 
	stroke,
	(drawVerticalItem): Likewise,
	* source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
	(getLegendItem): New method override.	

2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(setTitle): Add/remove chart as TitleChangeListener.

2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/entity/AxisLabelEntity.java
	(AxisLabelEntity): Assign axis argument,
	(toString): New method override.

2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(DEFAULT_BACKGROUND_PAINT): Changed to Color.WHITE,
	* source/org/jfree/chart/plot/CategoryPlot.java
	(DEFAULT_GRIDLINE_PAINT): Likewise,
	(CategoryPlot): Changed default axis offset,
	* source/org/jfree/chart/plot/Plot.java
	(DEFAULT_BACKGROUND_PAINT): Changed to Color.LIGHT_GRAY,
	* source/org/jfree/chart/plot/ThermometerPlot.java
	(ThermometerPlot): Override default background paint,
	* source/org/jfree/chart/plot/XYPlot.java
	(DEFAULT_BACKGROUND_PAINT): Changed to Color.LIGHT_GRAY,
	(XYPlot): Changed default axis offset.

2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>
